Move all font files into the same dir. Fix Peter’s The Cube manual display on mobile/narrow screens.

--- a/HTML/css/font.css
+++ b/HTML/css/font.css
@@ -28,3 +28,7 @@
   font-weight: bold;
   src: local('Trebuchet MS Bold Italic'), local('Trebuchet Bold Italic'), local('Trebuchet MS'), local('Trebuchet'), url(../font/trebucbi.ttf);
 }
+@font-face {
+    font-family: 'KRA';
+    src: url(../font/KR_A_Round.ttf);
+}
